# digilab-tech-test

./: .gitignore  EXERCISE.md  README.md  docker-compose.yml  package-lock.json  package.json
.claude/: launch.json
.github/workflows/: ci.yml
backend/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
backend/app/: config.py  db.py  dto.py  main.py  models.py
backend/app/health/: router.py
backend/app/routers/: workflows.py
backend/app/workflow/: models.py  repository.py  router.py  validation.py
backend/tests/: conftest.py  test_workflow_repository.py  test_workflow_validation.py  test_workflows.py
decision-log/: jac-10-validate-edges-on-draw.md  jac-12-persist-workflow-in-sqlite-database.md  jac-13-workspaces-homepage.md  jac-16-validate-basic-workflow-rules.md  jac-17-reflect-save-state-in-ui.md  jac-19-delete-nodes.md  jac-5-setup-frontend-project-with-react-flow.md  jac-6-add-node-types.md  jac-8-node-io-handles.md  jac-9-edit-node-label.md
frontend/: .env.example  README.md  eslint.config.mjs  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  setupTests.ts
frontend/src/api/: workflows.ts
frontend/src/app/: App.tsx
frontend/src/app/providers/: AppProviders.tsx
frontend/src/entities/workflow/: index.ts
frontend/src/features/add-node/: index.ts
frontend/src/features/connect-nodes/: index.ts
frontend/src/features/delete-node/: index.ts
frontend/src/features/edit-node-label/: index.ts
frontend/src/shared/api/: client.ts  (+1 more)
frontend/src/types/: workflow.ts
(+62 files in other folders)
